--- a/options.html
+++ b/options.html
@@ -79,45 +79,9 @@
       <section class="settings-group">
         <h2>Keyboard Shortcuts</h2>
         <p class="shortcuts-info">
-          Configure the main trigger shortcut in <a href="#" id="shortcutsLink">chrome://extensions/shortcuts</a>
+          Configure your keyboard shortcuts in Chrome's extension settings.
         </p>
-
-        <div class="setting-item">
-          <div class="setting-info">
-            <label>Close Tab</label>
-            <p class="setting-description">Key to close the selected tab while switcher is open</p>
-          </div>
-          <button class="hotkey-btn" id="hotkeyCloseTab" data-action="closeTab">
-            <span class="hotkey-value">W</span>
-            <span class="hotkey-hint">Click to change</span>
-          </button>
-        </div>
-
-        <div class="setting-item">
-          <div class="setting-info">
-            <label>Next Tab</label>
-            <p class="setting-description">Key to move selection to next tab</p>
-          </div>
-          <button class="hotkey-btn" id="hotkeyNextTab" data-action="nextTab">
-            <span class="hotkey-value">Arrow Right</span>
-            <span class="hotkey-hint">Click to change</span>
-          </button>
-        </div>
-
-        <div class="setting-item">
-          <div class="setting-info">
-            <label>Previous Tab</label>
-            <p class="setting-description">Key to move selection to previous tab</p>
-          </div>
-          <button class="hotkey-btn" id="hotkeyPrevTab" data-action="prevTab">
-            <span class="hotkey-value">Arrow Left</span>
-            <span class="hotkey-hint">Click to change</span>
-          </button>
-        </div>
-
-        <div class="shortcuts-note">
-          <p><strong>Note:</strong> These shortcuts work while the tab switcher is open. Press <kbd>Esc</kbd> to cancel.</p>
-        </div>
+        <a href="#" id="shortcutsLink" class="shortcuts-btn">Open Keyboard Shortcuts</a>
       </section>
     </main>
 
